--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.12.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.0.6</version>
+        </dependency>
     </dependencies>
 
     <build>
